--- a/package.json
+++ b/package.json
@@ -1,12 +1,24 @@
 {
-  "name": "salesboy-product",
+  "name": "rest_api_4",
   "version": "1.0.0",
-  "main": "index.js",
-  "repository": "https://github.com/harishreddymaryada/salesboy-product.git",
-  "author": "harishreddymaryada <maryadareddys@gmail.com>",
-  "license": "MIT",
+  "description": "rest api",
+  "main": "app.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon app_hooked.js"
+  },
+    "repository": "https://github.com/harishreddymaryada/salesboy-product.git",
+  "author": "harishreddymaryada",
+  "license": "ISC",
   "dependencies": {
+    "babel-preset-es2015-node": "^6.1.1",
+    "babel-preset-es2015-node6": "^0.4.0",
+    "babel-register": "^6.26.0",
+    "body-parser": "^1.18.2",
     "express": "^4.16.2",
-    "morgan": "^1.9.0"
+    "express-busboy": "^6.0.1",
+    "mongoose": "^4.12.1",
+    "morgan": "^1.9.0",
+    "source-map-support": "^0.5.0"
   }
 }
